--- a/web_wearable/session.html
+++ b/web_wearable/session.html
@@ -14,6 +14,7 @@
         integrity="sha512-hGBKkjAVJUXoImyDezOKpzuY4LS1eTvJ4HTC/pbxn47x5zNzGA1vi3vFQhhOehWLTNHdn+2Yqh/IRNPw/8JF/A=="
         crossorigin="anonymous" />
     <!--End FullPage Js-->
+    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
@@ -59,6 +60,7 @@
                     <select name="breed" id="breedSelect">
                         <option value="labrador">Labrador</option>
                         <option value="german">German Shepherd</option>
+                        <option value="border-collies">Border Collies</option>
                     </select>
                 </div>
 
@@ -81,6 +83,8 @@
 
                 <button id='setButton' class='button-body' type='button'>Set</button>
 
+                <p id="safeRangeLabel" style="color:gray">Safe range from 0º to 45º</p>
+
             </div>
         </div>
 
@@ -98,15 +102,15 @@
                 <!-- ROM angle -->
                 <div style="align-items: center;">
                     <!-- <span>Joint angle:</span> -->
-                    <span id="angleROMLabel" style="font-size: 80px;">0º</span>
+                    <span id="angleROMLabel" style="font-size: 100px;">0º</span>
+                    
                 </div>
 
                 <!-- safe range -->
                 <div>
+                    <canvas id="canvas" width="300" height="60"></canvas>
                     <p id='repLabel'>Repetitions: 0/1</p>
-                    <span id="minReachedLabel">Flexion: 0º</span>
-                    <span id="maxReachedLabel">Extension: 0º</span>
-                    <p id="safeRangeLabel" style="color:gray">Safe range from 0º to 45º</p>
+
                 </div>
             </div>
 
@@ -127,11 +131,7 @@
                     </ul>
                 </div>
                 <div>
-                    <label for="senderMail">Email:</label>
-                    <input type="text" id="mailInput" name="mailInput" size="30">
-                </div>
-                <div>
-                    <button id='mailButton' class='button-body' type='button'>Share </button>
+                    <button id='mailButton' class='button-body' type='button'>Save session</button>
                 </div>
             </div>
 
