--- a/web_wearable/session.html
+++ b/web_wearable/session.html
@@ -79,6 +79,7 @@
                 <div>
                     <label for="repetitions">Repetitions:</label>
                     <input type="number" id="repSelect" name="repetitions" min="1" max="20" value="1">
+                    <label><input type="checkbox" id="cbox1" value="angle_checkbox">Counterclockwise</label>
                 </div>
 
                 <button id='setButton' class='button-body' type='button'>Set</button>
