--- a/web_wearable/html/stats.html
+++ b/web_wearable/html/stats.html
@@ -14,7 +14,7 @@
     <!-- chart js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js" integrity="sha512-VCHVc5miKoln972iJPvkQrUYYq7XpxXzvqNfiul1H4aZDwGBGC0lq373KNleaB2LpnC2a/iNfE5zoRYmB4TRDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/1.0.2/chartjs-plugin-annotation.min.js"></script>
-    <link rel="stylesheet" href="styles_stats.css">
+    <link rel="stylesheet" href="../css/styles_stats.css">
 
     <!-- grid -->
     <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
@@ -26,7 +26,7 @@
 <body>
     <header class='flex-container'>
         <div class='flex-item' style="margin: 10px 0px;">
-            <a href="./index.html"><button>Back</button></a>
+            <a href="../index.html"><button>Back</button></a>
         </div>
         <div class='flex-item' style="margin: 10px 0px;">
             <span style="text-shadow: 1px 1px 1px rgb(0 0 0 / 25%); font-size: 25px;">Stats</span>
@@ -58,7 +58,6 @@
         <div id="myGrid" style="height: 300px; width:100%" class="ag-theme-alpine !important"></div>
     </div>
 
-    <script type="text/javascript" charset="utf-8" src="stats_script.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../js/stats_script.js"></script>
 </body>
-
 </html>
