--- a/web_wearable/index.html
+++ b/web_wearable/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wearable ROM</title>
+    <title>WOOFlex</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/p5ble@0.0.7/dist/p5.ble.js" type="text/javascript"></script>
@@ -13,31 +13,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styless_home.css">
+    <link rel="stylesheet" href="css/styless_home.css">
 </head>
 
 <body>
     <header>
-        <h1>Wearable ROM App 🐶</h1>
+        <h1>WOOFlex App 🐶</h1>
     </header>
 
     <div class='flex-container'>
         <div class='flex-item menu session'>
-            <a class='enlace' href="./session.html">Session</a>
+            <a class='enlace' href="html/session.html">Session</a>
         </div>
         <div class='flex-item menu stats'>
-            <a  class='enlace'  href="./stats.html">Stats</a>
+            <a  class='enlace'  href="html/stats.html">Stats</a>
         </div>
         <div class='flex-item menu settings'>
-            <a class='enlace'  href="./session.html">Settings</a>
+            <a class='enlace'  href="#">Settings</a>
         </div>
         <div class='flex-item menu tutorials'>
-            <a class='enlace'  href="./session.html">Tutorials</a>
+            <a class='enlace'  href="html/tutorial.html">Tutorials</a>
         </div>
     </div>
-
-
-    <!-- <script src="script.js"></script> -->
 </body>
-
 </html>
